Third session : add infinite scroll

--- a/www/templates/movies.html
+++ b/www/templates/movies.html
@@ -5,6 +5,11 @@
         {{movie.title}}
       </ion-item>
     </ion-list>
+    <ion-infinite-scroll
+      ng-if="isNotFullLoaded()"
+      on-infinite="loadMore()"
+      distance="1%">
+    </ion-infinite-scroll>
   </ion-content>
 </ion-view>
 
