--- a/www/templates/movie.html
+++ b/www/templates/movie.html
@@ -1,5 +1,14 @@
 <ion-view view-title="Film">
   <ion-content>
     <h1>{{movie.title}}</h1>
+    <div id="map_canvas">
+      <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options">
+        <ui-gmap-markers models="markers" coords="'self'" icon="'icon'" click="onMarkerClick">
+          <ui-gmap-windows show="show">
+            <div ng-non-bindable>{{content}}</div>
+          </ui-gmap-windows>
+        </ui-gmap-markers>
+      </ui-gmap-google-map>
+    </div>
   </ion-content>
 </ion-view>
